# gaze

./: .gitignore  DECISIONS.md  DESIGN.md  GRAMMAR.md  LANDSCAPE.md  MANIFESTO.md  README.md  RESEARCH.md  ROADMAP.md  STRATEGY.md  TAO.md  TUTORIAL.md  USERS.md  eslint.config.mjs
deck/: gaze-intro.md  lux-intro.md
decks/: eli5.md  gaze-theme.css  research-talk.md
examples/: calc.gaze  concurrent.lux  enums.gaze  hello.gaze  hello.lux  pipeline.gaze  pipeline.lux  pipes.gaze  pure_logic.lux  sandbox.lux  structs.gaze  weather.lux
examples/shortener/: FINDINGS.md
gaze/: Cargo.toml
gaze/src/: ast.rs  effects.rs  error.rs  fmt.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  token.rs
libgaze/: README.md  pyproject.toml
libgaze-ts/: README.md  package-lock.json  package.json  tsconfig.json
libgaze-ts/bench/: class_methods.ts  edge_cases.ts  pure_code.ts  run.ts  scan_repos.ts  stdlib_patterns.ts
libgaze-ts/src/: analyzer.ts  cli.ts  effects.ts  index.ts
libgaze/src/libgaze/: __init__.py  analyzer.py  cli.py  effects.py  policy.py
libgaze/tests/: test_analyzer.py  test_policy.py
libgaze/tests/fixtures/: agent.py  pure.py  sample.gazepolicy
liblux/: README.md  pyproject.toml
liblux/src/liblux/: __init__.py  cli.py  effects.py  policy.py
liblux/tests/: test_analyzer.py  test_policy.py
liblux/tests/fixtures/: agent.py  mixed.py  pure.py
