[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liblux"
version = "0.1.0"
description = "See what your code does to the world before it runs."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "itchymutt" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]

[project.scripts]
liblux = "liblux.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
